--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
         <link rel="stylesheet" href="css/signin.css" />
     </head>
     <body>
-        <h1> Bienvenue sur le chat du cul !</h1>
+        <h1> Bienvenue sur un super Chat !</h1>
         <div id="main">
             <h2>signup</h2>
             <span>username</span>
             <input type="text" id="signup_username"/>
             <span>password</span>
             <input type="password" id="signup_password1"/>
-            <span>Verify Password</span>
+            <span>Verify Password</span>    
             <input type="password" id="signup_password2"/>
             <input type="button" value="SIGNUP" id="signup_submit">
+            <label for="signup_submit"><i class="fas fa-arrow-circle-right"></i></label>
 
             <a href="file:///C:/Users/Raphael%20D/Desktop/TRAVAIL/Kwick/login.html">Already Signup ?</a>
         </div>
+        <script src="assets/all.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <script src="js/signup.js"></script>
     </body>
