--- a/login.html
+++ b/login.html
@@ -15,9 +15,11 @@
             <span>password</span>
             <input type="password" id="signup_password"/>
             <input type="button" value="LOGIN" id="login_submit">
+            <label for="login_submit"><i class="fas fa-arrow-circle-right"></i></label>
 
             <a href="file:///C:/Users/Raphael%20D/Desktop/TRAVAIL/Kwick/index.html">Signup ?</a>
         </div>
+        <script src="assets/all.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <script src="js/login.js"></script>
     </body>
