--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <div id="messagePart">
-                <div id="messageTitle"><span id="disconnect">disconnect</span></div>
+                <div id="messageTitle"><span id="disconnect"><i class="fas fa-power-off"></i></span></div>
                 <div id="messageList"></div>
                 <div id="message">
                     <input type="text" id="message_content">
