--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <input type="button" value="SIGNUP" id="signup_submit">
             <label for="signup_submit"><i class="fas fa-arrow-circle-right"></i></label>
 
-            <a href="file:///C:/Users/Raphael%20D/Desktop/TRAVAIL/Kwick/login.html">Already Signup ?</a>
+            <a href="login.html">Already Signup ?</a>
         </div>
         <script src="assets/all.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
