--- a/main.html
+++ b/main.html
@@ -30,13 +30,12 @@
                     <span id="disconnect_yes">yes !</span>
                     <span id="disconnect_no">no !</span>
                 </div>
-                
             </div>
-
+            <!-- <img src='https://images-eu.ssl-images-amazon.com/images/I/715vwvP5ZEL.png' alt='je test des truc' id='jebite' style='width:50px'> -->
+            
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <script src="assets/all.min.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
-
