--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
         <link rel="stylesheet" href="css/signin.css" />
     </head>
     <body>
-        <h1> Bienvenue sur un super Chat !</h1>
+        <h1> Welcome on a wonderfull Chat !</h1>
         <div id="main">
             <h2>signup</h2>
             <span>username</span>
             <input type="text" id="signup_username"/>
             <span>password</span>
-            <input type="password" id="signup_password1"/>
+            <input type="password" id="signup_password1">
             <span>Verify Password</span>    
             <input type="password" id="signup_password2"/>
             <input type="button" value="SIGNUP" id="signup_submit">
             <label for="signup_submit"><i class="fas fa-arrow-circle-right"></i></label>
-
             <a href="login.html">Already Signup ?</a>
         </div>
         <script src="assets/all.min.js"></script>
