--- a/main.html
+++ b/main.html
@@ -16,11 +16,32 @@
                 </div>
             </div>
             <div id="messagePart">
-                <div id="messageTitle"><span id="disconnect"><i class="fas fa-power-off"></i></span></div>
+                <div id="messageTitle">
+                    <span id="disconnect"><i class="fas fa-power-off"></i></span>
+                </div>
                 <div id="messageList"></div>
                 <div id="message">
                     <input type="text" id="message_content">
                     <i class="fas fa-location-arrow" id="send_message"></i>
+                    <span id="smileyMenuButton">😀</span>
+                    <div id="smileyMenu">
+                        <span id="smileyMenuTitle"><i  class="far fa-question-circle"></i>How to use</span>
+                        <span id="⚪">⚪</span>
+                        <span id="😀">😀</span>
+                        <span id="😎">😎</span>
+                        <span id="😍">😍</span>
+                        <span id="💩">💩</span>
+                        <span id="😂">😂</span>
+                        <span id="😅">😅</span>
+                        <span id="🤩">🤩</span>
+                        <span id="😰">😰</span>
+                        <span id="😴">😴</span>
+                        <span id="🖕">🖕</span>
+                        <span id="👌">👌</span>
+                        <span id="👍">👍</span>
+                        <span id="💪">💪</span>
+                        <span id="❔">❔</span>
+                    </div>
                 </div>
             </div>
             <div id="disconnect_menu_background"></div>
