V6 - ajout personne deco + rework smiley

--- a/main.html
+++ b/main.html
@@ -25,22 +25,30 @@
                     <i class="fas fa-location-arrow" id="send_message"></i>
                     <span id="smileyMenuButton">😀</span>
                     <div id="smileyMenu">
-                        <span id="smileyMenuTitle"><i  class="far fa-question-circle"></i>How to use</span>
                         <span id="⚪">⚪</span>
                         <span id="😀">😀</span>
+                        <span id="😂">😂</span>
                         <span id="😎">😎</span>
                         <span id="😍">😍</span>
-                        <span id="💩">💩</span>
-                        <span id="😂">😂</span>
+                        <span id="😏">😏</span>
                         <span id="😅">😅</span>
                         <span id="🤩">🤩</span>
                         <span id="😰">😰</span>
                         <span id="😴">😴</span>
+                        <span id="🤠">🤠</span>
+                        <span id="🤑">🤑</span>
+                        <span id="💩">💩</span>
                         <span id="🖕">🖕</span>
                         <span id="👌">👌</span>
                         <span id="👍">👍</span>
                         <span id="💪">💪</span>
                         <span id="❔">❔</span>
+                        <span id="🍑">🍑</span>
+                        <span id="🍆">🍆</span>
+                        <span id="💦">💦</span>
+                        <span id="🔥">🔥</span>
+                        <span id="💔">💔</span>
+                        <span id="❤️">❤️</span>
                     </div>
                 </div>
             </div>
